# video-capture

./: .gitignore  Cargo.toml  README.md
scripts/: build.ts
src/: error.rs  ffmpeg_init.rs  lib.rs  video_processor.rs  wasm_interface.rs
tests/: test.rs
tests/test_resources/: README.md
