# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "video-capture-wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
ffmpeg-next = { version = "7.1", default-features = false, features = ["format", "codec", "software-scaling", "build"] }

[profile.release]
lto = true
opt-level = 'z'
